FIX: cv spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -521,8 +521,12 @@ margin-top: -30px; */
 
 .work-education-container h2 {
     font-size: 23px;  /* Adjust this value as needed */
-line-height: 0; 
-    margin-top:60px; 
+    line-height: 1.2; 
+    margin-top:60px;
+    display: flex;
+    flex-wrap: wrap;
+    white-space: pre-wrap;
+    word-break: break-word;
 
 }
 
